--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,8 +72,13 @@ button:hover {
     display: block;
   }
 
-  .actualanswers {
-
+  .feedback {
+    font-style: italic;
+    font-size: 120%;
+    margin-top: 20px;
+    padding-top: 10px;
+    color: #F58426;
+    border-top: 2px solid #ccc;
   }
 
 
